--- a/exampleSite/content/post/2018-07-06-introducing-hugo-tint.Rmd
+++ b/exampleSite/content/post/2018-07-06-introducing-hugo-tint.Rmd
@@ -7,6 +7,7 @@ categories: ["Blogdown", "example"]
 excerpt: This post introduces hugo-tint and blogdown features to get you up and running with Hugo and blogdown.
 bibliography: skeleton.bib
 link-citations: yes
+draft: no
 blogdown::html_page:
   dev: "svg"
   toc: TRUE
